push: cleanup - use StreamEx and reformat